# esc-configdata-gen

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: esc-configdata.cpp  esc-configdata.hpp  main.cpp  util.cpp  util.hpp
test_package/: conanfile.py
tests/: CMakeLists.txt  test_gen.cpp
